--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,53 @@
 @import "./styles/login.css";
-
+@import "./styles/register.css";
+@import "./styles/sidebar.css";
+@import "./styles/navbar.css";
+@import "./styles/createride.css";
+@import "./styles/viewride.css";
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@200&family=Raleway:wght@200;500&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: Public Sans,
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.error-warning{
+	align-self: center;
+	color: red;
+	font-size: smaller;
+	font-weight: bold;
+	margin-top: 5px;
+	margin-bottom: 10px;
+}
+.bodyLayout{
+  display: flex;
+  flex-direction: row;
+}
+
+.bodyComponent{
+  max-height: 100vh;
+  width: 100vw;
+  overflow-y: auto;
+  
+}
+
+.nav-link{
+  cursor: pointer;
+  color: gray !important;
+}
+.nav-link:hover, .nav-link:focus, .nav-link:active {color: black !important}
+
+.loader{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.footer{
+  background-color: blanchedalmond;
 }
