--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -60,6 +60,11 @@
 	box-shadow: none;
 	border-style: none;
 	align-self: center;
+	width: 90px;
+}
+.register_button:hover{
+	background-color: #9991cc;
+	color: white;
 }
 .register_button_text{
 	font-weight: bolder;
