--- a/src/styles/createride.css
+++ b/src/styles/createride.css
@@ -51,6 +51,10 @@
 	border-style: none;
 	align-self: center;
 }
+.createride_button:hover{
+	background-color: #9991cc;
+	color: white;
+}
 .createride_button_text{
 	font-weight: bolder;
 }
