--- a/src/styles/createride.css
+++ b/src/styles/createride.css
@@ -4,7 +4,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-    width:60%;
+    width:100%;
 }
 
 @media screen and (max-width: 768px){
@@ -73,3 +73,11 @@
 	width: 100%;
 
 }
+.map-container{
+	width: 100%;
+	margin-left: 60px;
+	height: 80vh;
+}
+
+
+
