--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -51,24 +51,35 @@
 	border-radius: 4px;
 	border: 1px solid black;
 }
+
 .login_button{
-	background-color: #523be4;
-	color: white;
-	padding: 4%;
-	margin-top: 4%;
-	border-radius: 50px;
-	box-shadow: none;
-	border-style: none;
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:1em 0.5em 0em 0.1em;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    background-color:#523be4;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    color: white;
+    text-align:center;
+    transition: all 0.2s;
 	align-self: center;
+}
+@media all and (max-width:30em){
+    .login_button{
+    display:block;
+    margin:0.2em auto;
+    }
 }
 .login_button:hover{
 	background-color: #9991cc;
 	color: white;
+    border-color: rgba(255,255,255,1);
 }
-.login_button_text{
-	font-weight: bolder;
-}
-
 .login_link{
 	margin-top: 10%;
 	display: flex;
@@ -76,6 +87,16 @@
 	width: 100%;
 
 }
+
+.forgot_password{
+	margin-bottom: 5px;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	cursor: pointer;
+
+}
+
 .logo{
 	align-self: center;
 }
@@ -90,4 +111,17 @@
 
 .login-h4{
 	padding:2%;
+	margin-left: 10px;
+}
+.visibility-icon{
+	position: absolute;
+    right: 30px;
+    top: 22px;
+}
+.input-container{
+	width: 100%;
+    position: relative;
+display: flex;
+flex-direction: row;
+justify-content: center;
 }
