--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -15,7 +15,6 @@
 	align-items: flex-start;
 	justify-content: flex-start;
 	/* height: 50%; */
-    width:25%;
 }
 
 @media screen and (max-width: 768px){
@@ -31,7 +30,36 @@
         justify-content: center;
     }
     
+}
+
+@media screen and (min-width: 768px){
+    .register_input{
+        /* width: %; */
+        width: 30%;
+        padding: 5%;
     }
+    .register_box{
+        width: 40%;
+        height: auto;
+        align-items: center;
+        justify-content: center;
+    }
+    
+}
+@media screen and (min-width: 1300px){
+    .register_input{
+        /* width: %; */
+        width: 100%;
+        padding: 5%;
+    }
+    .register_box{
+        width: 25%;
+        height: auto;
+        align-items: center;
+        justify-content: center;
+    }
+    
+}
 
 .register_form{	
 	margin-top: 5%;
@@ -51,23 +79,37 @@
 	border: 1px solid black;
 }
 
+.register_button_text{
+	font-weight: bolder;
+}
+
 .register_button{
-	background-color: #523be4;
-	color: white;
-	padding: 5%;
-	margin-top: 4%;
-	border-radius: 50px;
-	box-shadow: none;
-	border-style: none;
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:1em 0.5em 0em 0.1em;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    background-color:#523be4;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    color: white;
+    text-align:center;
+    transition: all 0.2s;
 	align-self: center;
-	width: 90px;
+}
+@media all and (max-width:30em){
+    .register_button{
+    display:block;
+    margin:0.2em auto;
+    }
 }
 .register_button:hover{
 	background-color: #9991cc;
 	color: white;
-}
-.register_button_text{
-	font-weight: bolder;
+    border-color: rgba(255,255,255,1);
 }
 .register-h3 {
 	padding: 2%;
@@ -82,4 +124,18 @@
 	width: 100%;
 	cursor: pointer;
 
+}
+.login_link_steptwo{
+	margin-top: 10%;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	cursor: pointer;
+
+}
+
+.visibility-icon-register{
+	position: absolute;
+    right: 15px;
+    top: 22px;
 }
