--- a/src/styles/createride.css
+++ b/src/styles/createride.css
@@ -6,6 +6,14 @@
 	justify-content: center;
     width:100%;
 }
+.createride-h3 {
+	margin-bottom: 7% ;
+	padding: 2%;
+	font-weight: 600;
+    font-size: 30px;
+    line-height: 36px;
+	text-align: center;
+}
 
 @media screen and (max-width: 768px){
     .createride_input{
@@ -42,18 +50,32 @@
 }
 
 .createride_button{
-	background-color: #523be4;
-	color: white;
-	padding: 2%;
-	margin-top: 4%;
-	border-radius: 50px;
-	box-shadow: none;
-	border-style: none;
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:1em 0.5em 0em 0.1em;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    background-color:#523be4;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    color: white;
+    text-align:center;
+    transition: all 0.2s;
 	align-self: center;
+}
+@media all and (max-width:30em){
+    .createride_button{
+    display:block;
+    margin:0.2em auto;
+    }
 }
 .createride_button:hover{
 	background-color: #9991cc;
 	color: white;
+    border-color: rgba(255,255,255,1);
 }
 .createride_button_text{
 	font-weight: bolder;
