--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -32,12 +32,78 @@
     margin-top: 40px;
     font-size: large;
     padding: 20px 50px 50px 50px;
-    width: 75%;
  }
 .profile-form{
     
-    width: 90%;
     margin-top: 10px;
+    padding-left: 1em;
+    
+}
+
+@media screen and (max-width: 768px){
+
+    .profile-form-details{
+        /* width: %; */
+        width: 100%;
+    }
+    .profile-form-box{
+        /* width: %; */
+        width: 90%;
+        font-size: 12px;
+    }
+    .profile-form{
+        /* width: %; */
+        width: auto;
+    }
+    .profile-form-input{
+        width: 100%;
+    }
+    .profile-detail-name{
+        /* width: %; */
+        width: 30%;
+        margin-right: 2%;
+    }
+    
+}
+
+@media screen and (min-width: 768px){
+    .profile-form-box{
+        /* width: %; */
+        width: 80%;
+    }
+    .profile-form{
+        /* width: %; */
+        width: 100%;
+    }
+    .profile-form-details{
+        /* width: %; */
+        width: 100%;
+    }
+    .profile-detail-name{
+        /* width: %; */
+        width: 40%;
+        margin-right: 2%;
+    }
+    
+}
+@media screen and (min-width: 1300px){
+    .profile-form-box{
+        /* width: %; */
+        width: 75%;
+    }
+    .profile-form{
+        /* width: %; */
+        width: 100%;
+    }
+    .profile-form-details{
+        /* width: %; */
+        width: 70%;
+    }
+    .profile-detail-name{
+        /* width: %; */
+        width: 40%;
+        margin-right: 2%;
+    }
     
 }
 .profile-navtab{
@@ -58,10 +124,6 @@
 	border-radius: 4px;
 	border: 1px solid black;
 }
-.profile-form-details{
-    padding-left: 20px;
-    width: 70%;
-}
 
 .profile-detail{
     display: flex;
@@ -76,7 +138,6 @@
 }
 .profile-detail-name{
     margin-top: 20px;
-    width: 30%;
     text-align: left;
     font-weight: bold;
     
@@ -102,9 +163,9 @@
 
 .editprofile_button{
     margin-top: 20%;
-    display:inline-block;
+    display:block;
     padding:0.3em 1.2em;
-    margin:1em 0.1em 0.1em 1em;
+    margin-top:4%;
     border:0.16em solid rgba(255,255,255,0);
     border-radius:2em;
     box-sizing: border-box;
