Reset Password functionality

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -144,7 +144,7 @@ justify-content: center;
 	width: 100%;
 display: flex;
 flex-direction: column;
-justify-content: center;
+align-items: center;
 }
 
 .fp_box{
