--- a/src/styles/createride.css
+++ b/src/styles/createride.css
@@ -73,7 +73,7 @@
     }
 }
 .createride_button:hover{
-	background-color: #9991cc;
+	background-color: #91b4cc;
 	color: white;
     border-color: rgba(255,255,255,1);
 }
