--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,19 +1,25 @@
 
 
 #header .pro-sidebar-inner .pro-sidebar-layout {
-    background-color: white;
+    background-color: #D3E4ED;
     box-shadow: 0.5px 0.866px 2px 0px rgba(0, 0, 0, 0.15);
     color: black;
     height: 100vh;
   }
 
   #header .pro-sidebar-inner{
-    background-color: white;
+    background-color: #D3E4ED;
   }
 
   #header .pro-menu-item .pro-inner-list-item{
-    background-color: white;
+    background-color: #D3E4ED;
   }
   #header .pro-menu-item {
-    background-color: white;
+    background-color: #D3E4ED;
   }
+#header .pro-inner-item:focus, .pro-inner-item:active, .pro-inner-item:hover{
+  color: black !important;
+}
+#header .pro-inner-item:hover{
+  background-color: #e9ecef  !important;
+}
