--- a/src/styles/viewride.css
+++ b/src/styles/viewride.css
@@ -39,3 +39,142 @@
     border-radius: 8px;
 }
 
+.bookride_button{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    background-color:#3baee4;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    color: white;
+    text-align:center;
+    transition: all 0.2s;
+	align-self: flex-end;
+    font-size: smaller;
+}
+.cancelride_button{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    background-color:#ee382b;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    color: white;
+    text-align:center;
+    transition: all 0.2s;
+	align-self: flex-end;
+    font-size: smaller;
+}
+.startride_button{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    background-color:#4bb543;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    color: white;
+    text-align:center;
+    transition: all 0.2s;
+	align-self: flex-end;
+    font-size: smaller;
+}
+.completeride_button{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    background-color:#e9b91d;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    color: white;
+    text-align:center;
+    transition: all 0.2s;
+	align-self: flex-end;
+    font-size: smaller;
+}
+@media all and (max-width:30em){
+    .bookride_button{
+    display:block;
+    margin:0.2em auto;
+    }
+    .cancelride_button{
+        display:block;
+        margin:0.2em auto;
+    }
+    .startride_button{
+        display:block;
+        margin:0.2em auto;
+    }
+    .completeride_button{
+        display:block;
+        margin:0.2em auto;
+    }
+}
+.bookride_button:hover{
+	background-color: #a6cfe2;
+	color: white;
+    border-color: rgba(255,255,255,1);
+}
+
+.cancelride_button:hover{
+	background-color: #e78f7f;
+	color: white;
+    border-color: rgba(255,255,255,1);
+}
+.startride_button:hover{
+	background-color: #90e77f;
+	color: white;
+    border-color: rgb(207, 240, 204);
+}
+.completeride_button:hover{
+	background-color: #e4b16e;
+	color: white;
+    border-color: rgba(255,255,255,1);
+}
+.startride_button_disable{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    background-color:#4bb543;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    color: white;
+    text-align:center;
+    transition: all 0.2s;
+	align-self: flex-end;
+    font-size: smaller;
+}
+.more-icon{
+    margin-left:auto;
+    margin-top:20%;
+    cursor: pointer;
+    background-color: white;
+    border-radius: 50%;
+    border: 1px solid grey;
+    padding: 5px;
+}
+.more-icon:hover{
+    background-color: white;
+    border-radius: 50%;
+    border: 1px solid grey;
+    padding: 10px;
+}
