--- a/src/styles/viewride.css
+++ b/src/styles/viewride.css
@@ -38,7 +38,31 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-radius: 8px;
 }
+@media screen and (max-width: 800px){
+    
+    .ride-card{
+        font-size: smaller;    
+    }
+    .icon-dotted-line{
+        height: 5px;
+    }
+    .ride-card-map{
+        display: none;
+    }
+}
 
+@media screen and (min-width: 800px){
+    
+    .icon-dotted-line{
+        height: 20px;
+    }
+
+}
+.ride-card-map{
+    width: 50%;
+    height: 20vh;
+}
+    
 .bookride_button{
     display:inline-block;
     padding:0.3em 1.2em;
@@ -172,9 +196,48 @@
     border: 1px solid grey;
     padding: 5px;
 }
+
+.more-icon-sidebar{
+    position: absolute;
+    left: 35%;
+    right: 65%;
+    bottom: 96%;
+    cursor: pointer;
+    background-color: #D3E4ED;
+    border-radius: 50%;
+    border: 1px solid grey;
+    padding: 5px;
+}
+.more-icon-sidebar:hover{
+    border-radius: 50%;
+    border: 1px solid grey;
+    padding: 7px;
+}
+.bookride_button_disabled{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    background-color:#ec2d6d;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    color: white;
+    text-align:center;
+    transition: all 0.2s;
+	align-self: flex-end;
+    font-size: smaller;
+}
 .more-icon:hover{
     background-color: white;
     border-radius: 50%;
     border: 1px solid grey;
     padding: 10px;
+}
+.icon-dotted-line{
+    border-left: 2px dotted grey;
+
+    margin-left:1.4em;
 }
